<resources>
    <string name="app_name">Working Story</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ranging">RangingActivity</string>
    <string name="title_activity_login">Sign in</string>

    <string name="action_start_working">Start working</string>
    <string name="action_finish_working">Finish working</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_update">Update</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- String related to register -->
    <string name="action_register_short">Register</string>
    <string name="re_password">Re-password</string>
    <string name="action_register">Register</string>


    <string name="title_activity_main">Dashboard</string>

    <string name="title_section1">Main</string>
    <string name="title_section2">Profile</string>
    <string name="title_section3">Report</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="main_greater">Hello Mark, how are you today? </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_start_working">Start Working</string>
    <string name="button_finish_working">Finish Working</string>
    <string name="http_hint">http://</string>
</resources>
